# my-assessment

./: Dockerfile  README.md  pyproject.toml
Task_1/: Advanced_SQL.py  Check_your_SQL.ipynb  SQL.py
Task_1/.ipynb_checkpoints/: Advanced_SQL-checkpoint.py  Check_your_SQL-checkpoint.ipynb  SQL-checkpoint.py
Task_1/database/: database_load.py  loan.db
Task_1/database/data/: Loan_Repayments.csv  Months.csv  credit_data.csv  customer_data.csv  loan_dataset.csv
Task_1/database/data/.ipynb_checkpoints/: customer_data-checkpoint.csv
Task_2/: Python.py  python.ipynb
Task_2/.ipynb_checkpoints/: Python-checkpoint.py  python-checkpoint.ipynb
Task_2/data/: actual_loan_repayments.csv  scheduled_loan_repayments.csv
