[tool.poetry]
name = "autograder"
version = "0.1.0"
description = ""
authors = ["david"]

[tool.poetry.dependencies]
python = "^3.10"
jupyter = "^1.0.0"
duckdb = "^0.9.2"
pytest = "^7.4.4"
pandas = "^2.1.4"
flake8 = "^7.0.0"
numpy = "^1.26"
pyarrow = "^15.0.0"

[tool.poetry.group.dev.dependencies]
ipykernel = "^6.28.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
markers = ["weight: mark a test with a weight (default is 0)"]
